# mvh

./: .gitignore  .pre-commit-config.yaml  Dockerfile  main.py  pyproject.toml
.github/workflows/: publish-ghcr.yaml
scripts/: release.py
src/mvh/: api.py  deploy.py  main.py  schema.py
tests/: test_bootstrap.py
tests/test-stacks-repo/: mvh-config.yaml
tests/test-stacks-repo/mvh/: docker-compose.yaml
tests/test-stacks-repo/my-custom/: Dockerfile  docker-compose.yaml  test-file
