[project]
name = "mvh"
version = "0.5.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.129.0",
    "mypy>=1.19.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyyaml",
    "rich>=14.3.2",
    "uvicorn>=0.40.0",
]

[project.scripts]
mvh = "mvh.main:main"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "black>=26.1.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
]
